<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Project name-->
    <string name="app_name">Example_3</string>
    <!--Main activity-->
    <string name="fullName">Suhov Vitaly</string>
    <!--Fragment content-->
    <string name="android_student_department">Student department</string>
    <string name="android_beginner">Android beginner</string>
    <string name="inquisitive_student">Inquisitive student</string>
    <string name="myMessage">Beginner Android developer. \nI am sure that the result is doomed to success if the work continues to be done on the difficulties that stand in the way.</string>
    <string name="enter_your_message">Enter your message...</string>
    <string name="send_message">Send message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>